[gd_scene load_steps=6 format=3 uid="uid://bx1ttpfuoqrse"]

[ext_resource type="Script" path="res://scripts/settingsMenu.gd" id="1_04ro3"]
[ext_resource type="PackedScene" uid="uid://dx3qdqs3r8h7x" path="res://UI/VolumeSlider.tscn" id="1_lyl5p"]
[ext_resource type="Texture2D" uid="uid://bef15iqqonotx" path="res://assets/backgroundDefault.png" id="3_1m8de"]
[ext_resource type="AudioStream" uid="uid://be81gag0cbmxt" path="res://assets/audio/effects/buttonHover1.mp3" id="5_r7fja"]
[ext_resource type="AudioStream" uid="uid://bd67cp6x743pi" path="res://assets/audio/effects/buttonClicked.mp3" id="6_6plos"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_04ro3")

[node name="BackgroundDefault" type="Sprite2D" parent="."]
position = Vector2(961.861, 546.547)
scale = Vector2(1.01056, 1.02491)
texture = ExtResource("3_1m8de")
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 22.0
offset_top = -208.0
offset_right = -38.0
offset_bottom = 208.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 76

[node name="HBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 77

[node name="MasterSlider" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("1_lyl5p")]
layout_mode = 2

[node name="MasterVolumeLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/MasterSlider"]
layout_mode = 2
offset_top = -34.0
offset_right = 1178.0
offset_bottom = -11.0
text = "Master Volume"

[node name="MusicSlider" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("1_lyl5p")]
layout_mode = 2

[node name="MusicVolumeLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/MusicSlider"]
layout_mode = 2
offset_top = -34.0
offset_right = 1178.0
offset_bottom = -11.0
text = "Music Volume"

[node name="EffectsSlider" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("1_lyl5p")]
layout_mode = 2

[node name="EffectsVolumeLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/EffectsSlider"]
layout_mode = 2
offset_top = -34.0
offset_right = 1178.0
offset_bottom = -11.0
text = "Effects Volume"

[node name="Resolutions" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "1920x1080 (Default)"
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2

[node name="backToMainMenu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Return to Main Menu"

[node name="buttonHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_r7fja")
volume_db = -12.152
bus = &"Effects"

[node name="buttonPressed" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_6plos")
bus = &"Effects"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer/MasterSlider" to="." method="_on_master_volume_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer/MasterSlider" to="." method="_on_volume_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer/MusicSlider" to="." method="_on_volume_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer/EffectsSlider" to="." method="_on_effects_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer/EffectsSlider" to="." method="_on_volume_value_changed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Resolutions" to="." method="_on_resolutions_item_selected"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/backToMainMenu" to="." method="_on_back_to_main_menu_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/backToMainMenu" to="." method="_on_back_to_main_menu_pressed"]
